# spider-nix

./: .codecov.yml  .gitignore  .mcp.json  .pre-commit-config.yaml  ADVANCED_FEATURES.md  CHANGELOG.md  CONTRIBUTING.md  Justfile  LICENSE  PHASE1_COMPLETE.md  PHASE1_IMPLEMENTATION.md  README.md  ROADMAP_OSINT_OPSEC.md  SECURITY.md  TESTING.md  TEST_REPORT.md  adr-ledger  agent-hub.nix  ai-agent-os  cognitive-vault  default.nix  demo_feedback.db  example.md  file.json  flake.nix  justfile  ml-offload-api  phantom  pyproject.toml  result  ssh_sessions.db  test_imports.py
.github/workflows/: ci.yml  nix.yml  security.yml
examples/: README.md  ml_feedback_demo.py  quick_test.py  scrape_hackernews.py  stress_test.py
network/: Makefile  README.md  flake.nix  go.mod  go.sum  spider-network-proxy.toml.example
network/cmd/spider-network-proxy/: main.go
network/configs/: example.toml  test.toml
network/internal/config/: config.go
network/internal/proxy/: proxy.go
network/internal/tls/: fingerprint.go
skills/Linux_Server_Master/: nixos-remote-cache-expert.skill  nixos-remote-cache-master.skill
skills/Linux_Server_Master/nixos-remote-cache-expert/: SKILL.md
skills/Linux_Server_Master/nixos-remote-cache-expert/assets/: notion-project-template.md
skills/Linux_Server_Master/nixos-remote-cache-expert/references/: best-practices.md  hardware-optimization.md  troubleshooting.md
skills/Linux_Server_Master/nixos-remote-cache-expert/scripts/: diagnose_system.sh  generate_cache_config.py  monitor_performance.sh  setup_direct_network.sh
skills/nix-expert/: RESUMO-SKILL.md
skills/nix-expert/nixos-linux-master/: README.md  SKILL.md
skills/nix-expert/nixos-linux-master/scripts/: flake-scaffold.sh  (+2 more)
skills/security-architect/: SKILL.md
skills/security-architect/references/: compliance-frameworks.md  cryptography-guide.md  secure-patterns.md
src/spider_nix/: __init__.py  browser.py  cli.py  config.py  crawler.py  monitor.py  prioritizer.py  proxy.py  rate_limiter.py  report.py  session.py  stealth.py  storage.py  wizard.py
src/spider_nix/extraction/: __init__.py  dom_analyzer.py  extractor.py  fusion_engine.py  models.py  vision_extractor.py
src/spider_nix/intel/: jobs.py
src/spider_nix/ml/: __init__.py  failure_classifier.py  feedback_logger.py  models.py  schema.sql  strategy_selector.py  vision_client.py
src/spider_nix/osint/: __init__.py  analyzer.py  correlator.py  integrations.py  reconnaissance.py  scanner.py  vulnerability.py  web_discovery.py  web_intelligence.py
tests/: conftest.py  test_cli.py  test_crawler.py  test_failure_classifier.py  test_failure_classifier_simple.py  test_full_validation.py  test_intel_jobs.py  test_osint_analyzer.py  test_osint_reconnaissance.py  test_osint_scanner.py  test_stealth_detection.py  test_stealth_engine.py  test_strategy_selector.py  test_strategy_selector_simple.py
tests/extraction/: test_fusion_engine.py  test_models.py
tests/ml/: test_failure_classifier.py
tests/osint/: test_web_discovery.py  test_web_intelligence.py
(+10 files in other folders)
