[project]
name = "spider-nix"
version = "0.1.0"
description = "Enterprise web crawler for public data collection"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crawlee[playwright]>=0.5.0",
    "playwright>=1.40.0",
    "httpx>=0.27.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "fake-useragent>=1.4.0",
    "aiosqlite>=0.19.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
spider-nix = "spider_nix.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
