[project]
name = "spider-nix"
version = "0.1.0"
description = "Enterprise web crawler for public data collection"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40.0",
    "httpx>=0.27.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "fake-useragent>=1.4.0",
    "aiosqlite>=0.19.0",
    "pydantic>=2.0.0",
    "aiodns>=3.0.0",
    "pycares>=4.0.0",
    "python-whois>=0.8.0",
    # Multimodal extraction
    "lxml>=4.9.0",
    "beautifulsoup4>=4.12.0",
    "pillow>=10.0.0",
    # ML feedback (Phase 1 - rule-based)
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    # scipy for optimal fusion (optional)
    "scipy>=1.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "bandit[toml]>=1.7.0",
    "safety>=3.0.0",
    "pip-audit>=2.6.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
spider-nix = "spider_nix.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=spider_nix",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["spider_nix"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]
branch = true

[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
files = ["src/spider_nix"]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]

[tool.bandit.assert_used]
exclude = ["*/test_*.py"]
